Changes: - Fixed spacing in hebergements cards

--- a/css/style.css
+++ b/css/style.css
@@ -251,12 +251,12 @@ nav {
     height: 124px;
     border-top-left-radius: 20px;
     border-top-right-radius: 20px;
-    margin-bottom: 4px;
+    margin-bottom: 5px;
 }
 
 .hebergements-cards .card-content {
     width: 100%;
-    padding: 0 15px 15px;
+    padding: 4px 15px 15px;
     display: flex;
     flex-direction: column;
     justify-content: space-between;
